Refactor application entry and enhance UI components
- Changed startup URI in `App.xaml` to `ParentMainWindow.xaml`.
- Updated project file to reorganize asset management and added new resources.
- Introduced a custom style for sidebar buttons in `SchoolMedicalTheme.xaml`.
- Added new PNG icons (`bell.png`, `checkup.png`, `heart.png`, `home.png`, `pill.png`, `user.png`) for improved UI.
- Created `ParentHomePage.xaml` and its code-behind to provide functionalities for parents.
- Modified `ParentMainWindow.xaml` to include navigation buttons and set `ParentHomePage` as default content.
- Updated `ParentMainWindow.xaml.cs` to handle sidebar navigation.

--- a/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
+++ b/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
@@ -9,7 +9,37 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\bell.png" />
+    <None Remove="Assets\checkup.png" />
+    <None Remove="Assets\heart.png" />
+    <None Remove="Assets\home.png" />
+    <None Remove="Assets\pill.png" />
+    <None Remove="Assets\user.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SchoolMedicalWpf.Bll\SchoolMedicalWpf.Bll.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Assets\bell.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\checkup.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\heart.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\home.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\pill.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\user.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
