Enhance ParentMainWindow and add Profile management
Updated ParentMainWindow.xaml with new properties and modified navigation logic in ParentMainWindow.xaml.cs to include the Profile page. Removed unused asset files in the project file and added new UI styles in SchoolMedicalTheme.xaml. Created ParentProfilePage.xaml for displaying and editing user profile information, along with its code-behind for handling interactions.

--- a/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
+++ b/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\avatar.png" />
     <None Remove="Assets\bell.png" />
     <None Remove="Assets\checkup.png" />
     <None Remove="Assets\heart.png" />
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\avatar.png" />
     <Resource Include="Assets\bell.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
