Implement user authentication and profile management
- Changed startup URI to LoginWindow.xaml for user login.
- Removed unnecessary using directives in App.xaml.cs.
- Updated LoginWindow to handle user authentication asynchronously.
- Modified ParentHomePage and ParentMainWindow to accept User objects.
- Enhanced ParentProfilePage to display user data dynamically.
- Added LoadUserProfile method to populate user profile information.
- Updated project file to include Entity Framework Core package.
- Introduced appsettings.json for database connection string.
- Created UserService for user authentication logic.
- Updated SchoolmedicalWpfContext to retrieve connection string.
- Defined several entity classes for database structure and relationships.
- Generated migration files for database schema and seeding.
- Created UserRepository for handling user login functionality.

--- a/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
+++ b/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
@@ -19,7 +19,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SchoolMedicalWpf.Bll\SchoolMedicalWpf.Bll.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SchoolMedicalWpf.Bll\SchoolMedicalWpf.Bll.csproj">
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -42,6 +51,12 @@
     <Resource Include="Assets\user.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
