--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -41,4 +41,4 @@ jobs:
       run: msbuild $env:Solution_Name /p:Configuration=Release
 
     - name: Run tests
-      run: dotnet test $env:Test_Project_Path --no-build --verbosity normal
+      run: dotnet test $env:Test_Project_Path --verbosity normal
