Refactor and upgrade project structure and dependencies
- Updated `SidebarButton_Click` to use null-forgiving operator.
- Added reference to `SchoolMedicalWpf.DAL` in main and test projects.
- Introduced `SchoolMedicalWpf.Bll.Services` namespace for business logic.
- Modified `PasswordHash` assignments in `SchoolmedicalWpfContext` and tests to use null-forgiving operator.
- Restructured `SchoolMedicalWpf.Dal.csproj` to SDK-style, targeting .NET 8.0 with updated package references.

--- a/SchoolMedicalWpf.UnitTest/SchoolMedicalWpf.UnitTest.csproj
+++ b/SchoolMedicalWpf.UnitTest/SchoolMedicalWpf.UnitTest.csproj
@@ -21,6 +21,7 @@
 		<ProjectReference Include="..\SchoolMedicalWpf.Bll\SchoolMedicalWpf.Bll.csproj">
 			<Private>True</Private>
 		</ProjectReference>
+		<ProjectReference Include="..\SchoolMedicalWpf.DAL\SchoolMedicalWpf.Dal.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
