--- a/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
+++ b/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
@@ -12,11 +12,14 @@
     <None Remove="Assets\Account.png" />
     <None Remove="Assets\avatar.png" />
     <None Remove="Assets\bell.png" />
+    <None Remove="Assets\calendar.png" />
     <None Remove="Assets\Campaign.png" />
     <None Remove="Assets\checkup.png" />
     <None Remove="Assets\heart.png" />
     <None Remove="Assets\home.png" />
+    <None Remove="Assets\medical-event.png" />
     <None Remove="Assets\pill.png" />
+    <None Remove="Assets\registration.png" />
     <None Remove="Assets\Student.png" />
     <None Remove="Assets\user.png" />
   </ItemGroup>
@@ -42,6 +45,9 @@
     <Resource Include="Assets\bell.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Assets\calendar.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Assets\Campaign.png" />
     <Resource Include="Assets\checkup.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -52,7 +58,13 @@
     <Resource Include="Assets\home.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Assets\medical-event.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Assets\pill.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\registration.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\Student.png" />
