Add logout functionality and remove notification feature
- Introduced "Quit" buttons in Admin, Nurse, and Parent main windows for user logout.
- Implemented logout confirmation dialogs in respective code-behind files.
- Removed "Notify Parent" button and associated logic from MedicalEventDetailWindow and MedicalEventPage.
- Updated project files to reflect the removal of the Notification entity and its database table.
- Added migration to handle database changes related to the Notification removal.
- Included new logout icon asset for the logout buttons.

--- a/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
+++ b/SchoolMedicalWpf.App/SchoolMedicalWpf.App.csproj
@@ -17,6 +17,7 @@
     <None Remove="Assets\checkup.png" />
     <None Remove="Assets\heart.png" />
     <None Remove="Assets\home.png" />
+    <None Remove="Assets\logout.png" />
     <None Remove="Assets\medical-event.png" />
     <None Remove="Assets\pill.png" />
     <None Remove="Assets\registration.png" />
@@ -58,6 +59,7 @@
     <Resource Include="Assets\home.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Assets\logout.png" />
     <Resource Include="Assets\medical-event.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
